--- a/style.css
+++ b/style.css
@@ -55,7 +55,11 @@ h1 {
 }
 
 .choice:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
+}
+.choice.active {
+  transform: scale(0.92);
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
 }
 
 img {
